# usercenter_backend

./: .cursorrules  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 05d83b99744f_initial_migration.py  2a6ca7b8927a_add_fastapi_users_integration.py  4ce20d4e6962_add_fastapi_users_integration.py  75e70c80ca2f_update_trainingdata_relationships.py  a37674c7fe51_update_chat_model_to_remove_user_.py
app/: main.py
app/api/: chat.py  training.py
app/core/: config.py  database.py  openapi.py  security.py  users.py
app/models/: __init__.py  activity_log.py  chat.py  invitation.py  project.py  team.py  team_member.py  training.py  user.py
app/routers/: project.py  team.py  training.py  user.py
app/schemas/: chat.py  project.py  team.py  training.py  user.py
app/services/: activity_log_service.py  ai_service.py  project_service.py  team_service.py  training_service.py  user_service.py
app/utils/: email.py  storage.py
